--- a/index.html
+++ b/index.html
@@ -903,6 +903,11 @@ los datos personales.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Petición por parte del backend de las coordenadas de una dirección de un usuario extraída a través de los POD</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Devolución de las coordenadas</em></p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Cloudinary</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Petición al añadir juguete que transforma la URL de la imagen en una URL de cloudinary pública que es la que se almacena en la base de datos.</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Almacenamiento en la nube de la imágen.</em></p></td>
+</tr>
 </tbody>
 </table>
 <div class="sidebarblock arc42help">
@@ -979,6 +984,10 @@ The title of the table is the name of your system, the three columns contain the
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Geocode</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>API que se encargará de aportar las coordenadas de una dirección concreta con el objetivo de calcular los gastos de envío posteriormente</em></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Cloudinary</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>API que almacenará las imágenes de los productos en la nube.</em></p></td>
 </tr>
 </tbody>
 </table>
