--- a/index.html
+++ b/index.html
@@ -2243,6 +2243,18 @@ También tiene un documentación exhaustiva al ser un framework muy utilizado en
 <td class="tableblock halign-left valign-top"><p class="tableblock">Despliegue</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Todavía no hemos logrado desplegar exitosamente la aplicación</em></p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Usabilidad</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Queda por probar la aplicación con usuarios reales así como pasar validadores.</em></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Script test e2e</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Nos da error al ejecutar el comando debido a que no detecta 'jest'</em></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Testing</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Problemas con el testing de carga por Auth0, con los e2e en funcion del hardware y con los unitarios debido a uso de componentes como navigate.</em></p></td>
+</tr>
 </tbody>
 </table>
 <div class="sidebarblock arc42help">
